<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.zfix27r.movies.ui.main.MainViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainFragment">

            <ImageView
                android:id="@+id/kinopoisk_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_24"
                android:contentDescription="@string/content_description_kinopoisk_logo"
                android:src="@drawable/konopoisk_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                app:layout_constraintGuide_percent="0.15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="premieres,premieres_nav,premieres_recycler,await,await_nav,await_recycler,popular,popular_nav,popular_recycler,best,best_nav,best_recycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/premieres"
                style="@style/Theme.Movies.BlockTitle"
                android:layout_marginTop="16dp"
                android:text="@string/main_premiere_title"
                app:layout_constraintEnd_toStartOf="@+id/premieres_nav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kinopoisk_logo" />

            <TextView
                android:id="@+id/premieres_nav"
                style="@style/Theme.Movies.BlockNav"
                android:text="@string/main_all"
                app:layout_constraintBottom_toBottomOf="@id/premieres"
                app:layout_constraintEnd_toEndOf="@+id/kinopoisk_logo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/premieres_recycler"
                style="@style/Theme.Movies.Recycler.Horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premieres"
                tools:listitem="@layout/fragment_main_premier_item" />

            <TextView
                android:id="@+id/await"
                style="@style/Theme.Movies.BlockTitle"
                android:text="@string/main_await_title"
                app:layout_constraintEnd_toStartOf="@+id/await_nav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premieres_recycler" />

            <TextView
                android:id="@+id/await_nav"
                style="@style/Theme.Movies.BlockNav"
                android:text="@string/main_all"
                app:layout_constraintBottom_toBottomOf="@id/await"
                app:layout_constraintEnd_toEndOf="@+id/kinopoisk_logo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/await_recycler"
                style="@style/Theme.Movies.Recycler.Horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/await"
                tools:listitem="@layout/fragment_main_top_item" />

            <TextView
                android:id="@+id/best"
                style="@style/Theme.Movies.BlockTitle"
                android:text="@string/main_best_title"
                app:layout_constraintEnd_toStartOf="@+id/best_nav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/await_recycler" />

            <TextView
                android:id="@+id/best_nav"
                style="@style/Theme.Movies.BlockNav"
                android:text="@string/main_all"
                app:layout_constraintBottom_toBottomOf="@id/best"
                app:layout_constraintEnd_toEndOf="@+id/kinopoisk_logo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_recycler"
                style="@style/Theme.Movies.Recycler.Horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/best"
                tools:listitem="@layout/fragment_main_top_item" />

            <TextView
                android:id="@+id/popular"
                style="@style/Theme.Movies.BlockTitle"
                android:text="@string/main_popular_title"
                app:layout_constraintEnd_toStartOf="@+id/popular_nav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/best_recycler" />

            <TextView
                android:id="@+id/popular_nav"
                style="@style/Theme.Movies.BlockNav"
                android:text="@string/main_all"
                app:layout_constraintBottom_toBottomOf="@id/popular"
                app:layout_constraintEnd_toEndOf="@+id/kinopoisk_logo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_recycler"
                style="@style/Theme.Movies.Recycler.Horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular"
                tools:listitem="@layout/fragment_main_top_item" />

            <include
                layout="@layout/loading_error"
                app:callback="@{viewModel::retry}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:message="@{viewModel.error}" />

            <include
                layout="@layout/loading_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:isLoading="@{viewModel.isLoading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>